--- a/03_위원회와 주요 이슈(1).md
+++ b/03_위원회와 주요 이슈(1).md
@@ -17,7 +17,7 @@
 
 상임위원회는 행정부의 특정 기관을 도맡아서 상시 열리는 위원회다. 예를 들어 국회 국방위원회는 국방부 소관업무를, 보건복지위원회는 보건복지부 소관업무를 담당하는 식이다. 국회의원 임기는 4년이지만 상임위는 2년에 한 번씩(상반기 국회, 하반기 국회) 재구성하므로, 국회의원은 4년의 임기 동안 자신이 일할 상임위 한 곳을 선택할 2번의 기회를 가진다. 다만 <국회법>에 의해 각 상임위원회 정원이 정해져 있으므로 항상 본인이 원하는 상임위에 배정되는 것은 아니다. 
 
-2020년 3월 현재 한국 국회에는 다음의 17개 상임위원회가 있다. 순서는 <국회법>의 규정에서 나열하는 순서를 따른다. 별표(*)된 상임위는 '겸임 상임위원회'로, 나머지 다른 상임위와 겸임할 수 있도록 허용되어있다. 
+2020년 3월 현재 한국 국회에는 다음의 17개 상임위원회가 있다. 순서는 <국회법>의 규정에서 나열하는 순서를 따른다. 별표(*)된 상임위는 ‘겸임 상임위원회’로, 나머지 다른 상임위와 겸임할 수 있도록 허용되어있다. 
 - *국회운영위원회 (국회의원 정원 28명)
 - 법제사법위원회 (18명)
 - 정무위원회 (24명)
@@ -36,19 +36,19 @@
 - *정보위원회 (12명)
 - *여성가족위원회 (17명)
 
-특별위원회는 특별히 논의가 필요한 이슈가 있을 때 일시적으로 운영하는 위원회이다. 2016-2020 국회에서 만들어진 특별위원회 몇몇 개의 이름을 살펴보면 그 성격을 알 수 있다. '대법원장(김명수)임명동의에관한인사청문특별위원회', '저출산·고령화대책특별위원회', '미세먼지대책특별위원회', '헌법개정특별위원회', '평창동계올림픽및국제경기대회지원특별위원회' 등. 다만 예산결산특별위원회는 매년 중앙정부 예산 전체를 심사하고 결산해야 하므로, <국회법> 규정을 통해 상설운영된다. <전국투표전도 2020>에서는 2016-2020 국회에서 특별히 주목받은 특별위원회들의 역할을 소개한다. 
+특별위원회는 특별히 논의가 필요한 이슈가 있을 때 일시적으로 운영하는 위원회이다. 2016-2020 국회에서 만들어진 특별위원회 몇몇 개의 이름을 살펴보면 그 성격을 알 수 있다. ‘대법원장(김명수)임명동의에관한인사청문특별위원회’, ‘저출산·고령화대책특별위원회’, ‘미세먼지대책특별위원회’, ‘헌법개정특별위원회’, ‘평창동계올림픽및국제경기대회지원특별위원회’ 등. 다만 예산결산특별위원회는 매년 중앙정부 예산 전체를 심사하고 결산해야 하므로, <국회법> 규정을 통해 상설운영된다. <전국투표전도 2020>에서는 2016-2020 국회에서 특별히 주목받은 특별위원회들의 역할을 소개한다. 
 - 예산결산특별위원회 (50명)
 - 정치개혁특별위원회 (2017. 08. 21 ~ 2019. 08. 29, 19명)
 - 사법개혁특별위원회 (2018. 01. 12 ~ 2019. 08. 23, 16명)
 
 
 ### 교섭단체와 비교섭단체
-국회의원이 소속된 정당들은 규모에 따라 교섭단체와 비교섭단체로 나뉜다. 교섭단체는 '국회에서 교섭(협상)할 권리를 가진 단체'이다. 본회의와 상임위의 의사일정, 안건조정, 인원배정 등은 모두 교섭단체끼리 논의한다. 17개 상임위원회 위원장을 교섭단체의 의원 비율에 따라 배분한다던가, 각 위원회마다 교섭단체를 대표해서 의사일정을 논의하는 간사 1인을 배정하여 국회 운영에 관여할 수 있다. 교섭단체는 정당이 받는 국고보조금을 추가로 받거나, 국회의 지원을 받아 자체 정책연구위원을 고용하는 등의 혜택도 주어진다. 
+국회의원이 소속된 정당들은 규모에 따라 교섭단체와 비교섭단체로 나뉜다. 교섭단체는 ‘국회에서 교섭(협상)할 권리를 가진 단체’이다. 본회의와 상임위의 의사일정, 안건조정, 인원배정 등은 모두 교섭단체끼리 논의한다. 17개 상임위원회 위원장을 교섭단체의 의원 비율에 따라 배분한다던가, 각 위원회마다 교섭단체를 대표해서 의사일정을 논의하는 간사 1인을 배정하여 국회 운영에 관여할 수 있다. 교섭단체는 정당이 받는 국고보조금을 추가로 받거나, 국회의 지원을 받아 자체 정책연구위원을 고용하는 등의 혜택도 주어진다. 
 
-교섭단체를 구성하는 기준은 국회의원 20명이다. 즉, 의원이 20명 이상인 정당은 1개의 교섭단체를 꾸리고, 그 정당의 원내대표는 '교섭단체 대표의원'으로서 국회일정과 안건을 논의하는 자리에 참석할 수 있다. 뿐만 아니라, 여러 정당끼리 합쳐서 20명 이상의 규모가 되면 1개의 교섭단체를 꾸릴 수도 있다. 한국에서는 그런 경우가 지금까지 2번 있었다. 2008-12년 국회에서 자유선진당(18석: 충청권 보수 제3정당)과 창조한국당(3석: 진보적 제3세력 정당)이 '선진과 창조의 모임'이라는 이름으로, 2016-20년 국회에서 민주평화당(14석: 전라권 민주당계 제3정당)과 정의당(6석: 사민주의 정당)이 '평화와 정의의 모임'이라는 이름으로 교섭단체를 꾸렸다. 
+교섭단체를 구성하는 기준은 국회의원 20명이다. 즉, 의원이 20명 이상인 정당은 1개의 교섭단체를 꾸리고, 그 정당의 원내대표는 ‘교섭단체 대표의원’으로서 국회일정과 안건을 논의하는 자리에 참석할 수 있다. 뿐만 아니라, 여러 정당끼리 합쳐서 20명 이상의 규모가 되면 1개의 교섭단체를 꾸릴 수도 있다. 한국에서는 그런 경우가 지금까지 2번 있었다. 2008-12년 국회에서 자유선진당(18석: 충청권 보수 제3정당)과 창조한국당(3석: 진보적 제3세력 정당)이 ‘선진과 창조의 모임’이라는 이름으로, 2016-20년 국회에서 민주평화당(14석: 전라권 민주당계 제3정당)과 정의당(6석: 사민주의 정당)이 ‘평화와 정의의 모임’이라는 이름으로 교섭단체를 꾸렸다. 
 
 ### 다시, 위원회와 의원 배정
-앞서서 한국 국회에서 위원회가 차지하는 중요성, 그리고 교섭단체가 가지는 권한에 대해 설명했다. 촉이 좋은 독자는 눈치챘을 것이다. "상임위원회 배정를 정할 때 교섭단체끼리 치열하게 다투겠구나." 2년에 한 번씩 상임위 배정을 할 때, 각 정당(교섭단체) 원내대표들은 2년 간의 의정활동 계획과 목표를 바탕으로 위원회별 의원 배치 전략을 가지고 협상을 진행한다. 자기 당에서 반드시 통과시키고 싶은 노동관련 법안이 있다면 환경노동위원회에 더 많은 의원들을 넣으려고 할 것이고, 선거법 의제를 주도적으로 풀어가려면 정치개혁특별위원회 위원장을 배정받으려고 할 것이다. 이를 위해 다른 위원회의 의석수와 위원장 자리를 양보하는 타협을 해서라도 말이다. 
+앞서서 한국 국회에서 위원회가 차지하는 중요성, 그리고 교섭단체가 가지는 권한에 대해 설명했다. 촉이 좋은 독자는 눈치챘을 것이다. “상임위원회 배정를 정할 때 교섭단체끼리 치열하게 다투겠구나.” 2년에 한 번씩 상임위 배정을 할 때, 각 정당(교섭단체) 원내대표들은 2년 간의 의정활동 계획과 목표를 바탕으로 위원회별 의원 배치 전략을 가지고 협상을 진행한다. 자기 당에서 반드시 통과시키고 싶은 노동관련 법안이 있다면 환경노동위원회에 더 많은 의원들을 넣으려고 할 것이고, 선거법 의제를 주도적으로 풀어가려면 정치개혁특별위원회 위원장을 배정받으려고 할 것이다. 이를 위해 다른 위원회의 의석수와 위원장 자리를 양보하는 타협을 해서라도 말이다. 
 
 위원회 배정 문제는 정당의 전략 차원을 넘어서, 국회의원 개인의 역량과 국회 바깥 사회의 요구와도 밀접한 연관이 있다. 극단적으로, 국방위원회에 성소수자 차별금지를 중시하는 의원 1명이 소속되면 한국군 내의 성소수자 색출 문제를 국회에서 논의할 수 있고, 교육위원회에 사립학교 재단 이사 출신 의원 1명이 소속되면 사립학교 운영에 국가가 개입하는 정책의 논의를 질질 끌 수 있는 환경이 마련되는 셈이다. 반대로 해당 의제를 담당할 적임자 의원 1명이 해당 상임위에 배정되지 못하면, 그 의제에 대해 논의하거나 대항할 길이 막히는 셈이다. 12~ 30명의 적은 인원이 모이는 위원회 안에서 특정 분야에 대한 논의가 대부분 이뤄지는 환경이다보니, 위원회에 포진한 의원 한 명 한 명의 명단, 그리고 그 한 명의 활동내역은 국회 바깥 사회에 엄청난 영향을 끼친다. 당신이 국회의원 한 명의 4년간 성과를 평가할 때 반드시 살펴봐야 할 내용이다.
 
@@ -95,14 +95,14 @@
 
 #### 인천 부평구 을, 경기 고양시 갑
 **더불어민주당 홍영표, 정의당 심상정**
-2016-2020 국회가 선거제도를 개정할 수 있었던 데에는, <공직선거법> 개정안을 발의하고 `신속처리안건(속칭 '패스트트랙'. 법안을 심사하는 위원회 소속 의원의 3/5 이상이 동의하여 신속처리안건으로 지정되면, 위원회의 의결, 법제사법위원회의 법안자구심사, 본회의 의결을 최장 330일 이내에 반드시 마치도록 하는 제도.)`으로 지정하는 데 결정적 역할을 한 두 사람의 노력이 컸다. 
+2016-2020 국회가 선거제도를 개정할 수 있었던 데에는, <공직선거법> 개정안을 발의하고 `신속처리안건(속칭 ‘패스트트랙’. 법안을 심사하는 위원회 소속 의원의 3/5 이상이 동의하여 신속처리안건으로 지정되면, 위원회의 의결, 법제사법위원회의 법안자구심사, 본회의 의결을 최장 330일 이내에 반드시 마치도록 하는 제도.)`으로 지정하는 데 결정적 역할을 한 두 사람의 노력이 컸다. 
 
-국회 후반기 상임위 배치를 진행할 때 더불어민주당 원내대표였던 홍영표는, 정개특위에서 개정 찬성파가 충분한 다수를 점하도록 했다. 이 과정에서 정개특위 위원장이 된 심상정은 연동형 비례대표제를 오랫동안 주장한 당사자로서 <공직선거법> 개정을 위한 단일안을 각 당이 만들어내도록 강력하게 압박하였다. 결국 두 명의 주도 하에 <공직선거법> 개정안은 신속처리과정을 밟게 되었고, 합의되어 통과되거나 아예 부결되는 양자택일의 상황에서 '강제로' 토론이 진행될 환경이 만들어졌다.
+국회 후반기 상임위 배치를 진행할 때 더불어민주당 원내대표였던 홍영표는, 정개특위에서 개정 찬성파가 충분한 다수를 점하도록 했다. 이 과정에서 정개특위 위원장이 된 심상정은 연동형 비례대표제를 오랫동안 주장한 당사자로서 <공직선거법> 개정을 위한 단일안을 각 당이 만들어내도록 강력하게 압박하였다. 결국 두 명의 주도 하에 <공직선거법> 개정안은 신속처리과정을 밟게 되었고, 합의되어 통과되거나 아예 부결되는 양자택일의 상황에서 ‘강제로’ 토론이 진행될 환경이 만들어졌다.
 
 
 #### 서울 동작구 을, 경기 안양시 동안구 을
 **미래통합당 나경원, 심재철**
-나경원(2018~2019)과 심재철(2019~)이 1년 임기의 자유한국당(현 미래통합당) 원내대표를 맡는 동안, 자유한국당은 급격한 변화를 보였다. 나머지 원내 4당이 입법연대를 짜고 선거제도 개편, `공수처 설치(p. XXX 참고)`, `유치원 3법(4권 ‘위원회와 주요 이슈 (2)’, p.XXX 참고)` 등을 빠르게 논의하는 패스트트랙 정국에서, 나경원과 심재철은 모든 입법협상과 국회 의사일정 합의를 거부하여, 시간을 끌며 입법연대를 내부에서 분열시키려는 방식으로 대응한 것이다. 그 과정에서 자유한국당은 '국회선진화법'이 도입된 2012년 이후 처음으로, 회의진행 방해를 위한 `국회의원 감금(2019년 4월, 자유한국당 의원 11명이 바른미래당 채이배 의원의 사개특위 회의 참가를 저지하기 위해, 채이배 의원실의 문을 몸으로 봉쇄한 사건.)`, 본회의장 단상 점거(2019년 12월) 등을 당 차원에서 진행했다. 
+나경원(2018~2019)과 심재철(2019~)이 1년 임기의 자유한국당(현 미래통합당) 원내대표를 맡는 동안, 자유한국당은 급격한 변화를 보였다. 나머지 원내 4당이 입법연대를 짜고 선거제도 개편, `공수처 설치(p. XXX 참고)`, `유치원 3법(4권 ‘위원회와 주요 이슈 (2)’, p.XXX 참고)` 등을 빠르게 논의하는 패스트트랙 정국에서, 나경원과 심재철은 모든 입법협상과 국회 의사일정 합의를 거부하여, 시간을 끌며 입법연대를 내부에서 분열시키려는 방식으로 대응한 것이다. 그 과정에서 자유한국당은 ‘국회선진화법’이 도입된 2012년 이후 처음으로, 회의진행 방해를 위한 `국회의원 감금(2019년 4월, 자유한국당 의원 11명이 바른미래당 채이배 의원의 사개특위 회의 참가를 저지하기 위해, 채이배 의원실의 문을 몸으로 봉쇄한 사건.)`, 본회의장 단상 점거(2019년 12월) 등을 당 차원에서 진행했다. 
 
 이는 두 가지 측면에서 보수주류 정당의 오랜 기조를 정면으로 뒤집는 일이었다. 120석 내외의 대형 정당이 협상의 주도권을 가져가는 것을 포기했다는 점, 대신 민주적 의사결정의 판을 무력화시켜 극우적 지지층을 완전히 포섭해냈다는 점. 이 내용에 대한 평가는 2020년 총선의 주요 전선 중 하나이다.
 
@@ -113,14 +113,14 @@
 ### 법제사법위원회(법사위) #2
 법제사법위원회는 행정부의 법무부, 감사원, 검찰청, 법제처 및 그 산하기관, 그리고 사법부인 법원 및 헌법재판소와 관련된 사안을 다루는 위원회다. 여기에 대통령이나 법관 등 공직자의 탄핵소추가 국회에서 의결되었을 때, 법사위는 국회를 대표하여 헌법재판소에서의 탄핵심판을 책임진다. 
 
-한국의 정치 고관심층 사이에서는 검찰의 '중립성'과 수사의 '적절성', 검찰의 인사발령 등 검찰청 관련 내용이 유달리 주목받고, 이에 대한 논쟁이 법사위 안건의 전부인 것 처럼 보도된다. 그러나 법사위가 담당할 다른 사안들도 그에 못지 않게 중요하다. 예를 들어 판사가 제대로 심판할 수 있도록 숙고할 수 있는 여유를 확보하는 구조를 만드는 문제, 개별 판결문을 공공정보로 공개하는 사업, 법무부의 외국인 입국자 관리감독, 범죄자 교정시설(교도소, 구치소 등) 관리감독, 감사원의 행정부 감사업무에 대한 감사 등등. 제아무리 법에 따라 통치하는 국가라 하더라도, 그 법에 따라 감사/수사하고, 기소하고, 판결을 내리고, 판결 내용을 실행하는 과정에는 모두 사람의 주관과 의지가 개입되기 마련이다. 따라서 국회가 법사위를 통해 이 과정에 대해 토론하고 제안하는 것, 사법부와 사법행정기관을 견제하는 것은, 법에 따른 통치가 제대로 실행되기 위해 반드시 필요하다.
+한국의 정치 고관심층 사이에서는 검찰의 ‘중립성’과 수사의 ‘적절성’, 검찰의 인사발령 등 검찰청 관련 내용이 유달리 주목받고, 이에 대한 논쟁이 법사위 안건의 전부인 것 처럼 보도된다. 그러나 법사위가 담당할 다른 사안들도 그에 못지 않게 중요하다. 예를 들어 판사가 제대로 심판할 수 있도록 숙고할 수 있는 여유를 확보하는 구조를 만드는 문제, 개별 판결문을 공공정보로 공개하는 사업, 법무부의 외국인 입국자 관리감독, 범죄자 교정시설(교도소, 구치소 등) 관리감독, 감사원의 행정부 감사업무에 대한 감사 등등. 제아무리 법에 따라 통치하는 국가라 하더라도, 그 법에 따라 감사/수사하고, 기소하고, 판결을 내리고, 판결 내용을 실행하는 과정에는 모두 사람의 주관과 의지가 개입되기 마련이다. 따라서 국회가 법사위를 통해 이 과정에 대해 토론하고 제안하는 것, 사법부와 사법행정기관을 견제하는 것은, 법에 따른 통치가 제대로 실행되기 위해 반드시 필요하다.
 
 ### 사법개혁특별위원회(사개특위)
 2016-2020 국회에 설치된 사법개혁특별위원회는 매우 막중한 과제를 안은 채 출범했다. 사개특위의 큰 목표는 2가지였다. 첫째, 양승태 대법원장(2011~ 17) 시절의 대법원이 법관인사권을 이용해 개별 판사의 재판에 압력을 가하거나, 박근혜 행정부로부터 대법원에 유리한 제도를 얻어내기 위해 일종의 `재판거래(이 재판거래는 일제 강제징용 배상판결을 고의로 진행하지 않은 것을 비롯해, 각종 노동, 사회 관련 시국사건에 대한 개입으로 이어졌다.)`를 한 사건이 재발하지 않도록 예방책을 만드는 것. 둘째, 검찰과 경찰의 수사권/기소권을 조정하고 검찰로부터 독립된 고위공직자 수사 전담 행정부서(‘고위공직자수사처’, 약칭 ‘공수처’)를 설치하여 검찰 견제구조를 만드는 것. 
 
-이상의 내용은 문재인 행정부와 민주당계 정당이 오랜 시간동안 역점을 가지고 추진한 사업이자, 사법부와 사법 절차가 민주정에 맞게 작동하기 위해 한 번은 반드시 제대로 논의되어야 했던 사항이었다. "법원과 검찰이 정치적으로 변질되었다"는 주장을 제쳐놓더라도, 검찰이 어떤 사건을 수사하느냐, 법원이 어떻게 판결을 내리느냐에 따라 그 대상이 되는 개인에게 미치는 영향이 엄청나게 크기 때문에, 사법 절차가 잘 진행되도록 재판부와 검찰의 권력이 감시받을 필요가 있기 때문이다.  
+이상의 내용은 문재인 행정부와 민주당계 정당이 오랜 시간동안 역점을 가지고 추진한 사업이자, 사법부와 사법 절차가 민주정에 맞게 작동하기 위해 한 번은 반드시 제대로 논의되어야 했던 사항이었다. “법원과 검찰이 정치적으로 변질되었다”는 주장을 제쳐놓더라도, 검찰이 어떤 사건을 수사하느냐, 법원이 어떻게 판결을 내리느냐에 따라 그 대상이 되는 개인에게 미치는 영향이 엄청나게 크기 때문에, 사법 절차가 잘 진행되도록 재판부와 검찰의 권력이 감시받을 필요가 있기 때문이다.  
 
-2019년부터 공수처는 중앙정계를 뒤흔드는 문제로 떠올랐다. 더불어민주당, 바른미래당, 민주평화당, 정의당이 '절반 연동형 비례대표제' 선거제도 법안과 공수처 설치 법안을 함께 추진하는 입법연대를 구성한 것이다. 앞서 살펴본 정개특위(p.XXX 참조)가 그러했듯, 사개특위에서의 공수처 논의가 어떻게 진행되느냐에 따라, 나머지 쟁점법안의 처리여부와 정국 전체의 흐름이 요동쳤다. <고위공직자범죄수사처 설치 및 운영에 관한 법률안>은 결국 2019년 12월 30일에 본회의를 통과했다. 
+2019년부터 공수처는 중앙정계를 뒤흔드는 문제로 떠올랐다. 더불어민주당, 바른미래당, 민주평화당, 정의당이 ‘절반 연동형 비례대표제’ 선거제도 법안과 공수처 설치 법안을 함께 추진하는 입법연대를 구성한 것이다. 앞서 살펴본 정개특위(p.XXX 참조)가 그러했듯, 사개특위에서의 공수처 논의가 어떻게 진행되느냐에 따라, 나머지 쟁점법안의 처리여부와 정국 전체의 흐름이 요동쳤다. <고위공직자범죄수사처 설치 및 운영에 관한 법률안>은 결국 2019년 12월 30일에 본회의를 통과했다. 
 
 - - -
 
@@ -146,9 +146,9 @@
 #### 서울 강서구 을
 **더불어민주당 금태섭**
 
-금태섭이 더불어민주당에서 맡는 역할은 상당히 독특하다. 검사 출신이라는 배경은 그가 검찰의 이익을 대변할 것이라는 인상을 준다. 그러나 2000년대부터 한겨레신문에 "수사 제대로 받는 법"이라는 칼럼을 연재하거나, `모욕죄 및 명예훼손죄의 독소조항(검찰이 특정한 발언을 콕 집어서 수사할 수 있다는 문제가 지적되어 왔다. 모욕죄에 대한 형사처벌을 없애고 민사 손해배상으로 대체하는 주장, (거짓이 아닌)사실을 말하는 것은 명예훼손으로 처벌하지 말자는 주장이 있다.)`을 폐지하자는 주장을 하는 등 수사기관의 권력을 약화시키는 행동도 많이 보여줬기 때문이다. 이런 입체적인 캐릭터는 공수처 설치 문제가 이슈가 되었을 때 특히 주목받았다. "공수처를 통해 대통령이 견제받지 않고 편익에 맞게 수사권을 남용할 수 있다"는 주장으로 공수처 설치를 반대한 것이다.
+금태섭이 더불어민주당에서 맡는 역할은 상당히 독특하다. 검사 출신이라는 배경은 그가 검찰의 이익을 대변할 것이라는 인상을 준다. 그러나 2000년대부터 한겨레신문에 “수사 제대로 받는 법”이라는 칼럼을 연재하거나, `모욕죄 및 명예훼손죄의 독소조항(검찰이 특정한 발언을 콕 집어서 수사할 수 있다는 문제가 지적되어 왔다. 모욕죄에 대한 형사처벌을 없애고 민사 손해배상으로 대체하는 주장, (거짓이 아닌)사실을 말하는 것은 명예훼손으로 처벌하지 말자는 주장이 있다.)`을 폐지하자는 주장을 하는 등 수사기관의 권력을 약화시키는 행동도 많이 보여줬기 때문이다. 이런 입체적인 캐릭터는 공수처 설치 문제가 이슈가 되었을 때 특히 주목받았다. “공수처를 통해 대통령이 견제받지 않고 편익에 맞게 수사권을 남용할 수 있다”는 주장으로 공수처 설치를 반대한 것이다.
 
-이 의견에 동의하든 동의하지 않든, 금태섭은 (특히 더불어민주당 지지자에게는) 매우 주목해야 할 정치인이 되었다. 금태섭의 당내 입지가 곧 '더불어민주당이 당내 이견을 포용하느냐 마느냐'를 확인하는 증거처럼 여겨지게 되었기 때문이다.
+이 의견에 동의하든 동의하지 않든, 금태섭은 (특히 더불어민주당 지지자에게는) 매우 주목해야 할 정치인이 되었다. 금태섭의 당내 입지가 곧 ‘더불어민주당이 당내 이견을 포용하느냐 마느냐’를 확인하는 증거처럼 여겨지게 되었기 때문이다.
 
 #### 광주 광산구 을
 **국민의당-무소속 권은희**
