--- a/04_위원회와 주요 이슈(2).md
+++ b/04_위원회와 주요 이슈(2).md
@@ -7,12 +7,12 @@
 ### 국회운영위원회(운영위) #2, 정무위원회(정무위) #2
 운영위와 정무위가 담당하는 중앙정부기관 중에, 개인의 권리와 직접 연관된 중요한 기관 2곳이 있다. 국가인권위원회(운영위 소관)는 정부, 기업 등의 집단이 개인이 마땅히 누려야 할 권리를 보장하지 않거나 침해할 경우, 또는 개인을 차별하는 경우, 이를 조사하고 시정할 것을 권고한다. 국민권익위원회(정무위 소관)는 공공기관의 부패 또는 행정조치로 인해 개인이 부당하거나 불공평하게 피해를 보는 사례를 조사하고 평가 및 제도개선을 권고한다. 개인의 권리가 직접 침해당할 때 제일 먼저 진정을 넣을 수 있는 기관들이다. 따라서 이들 기관의 업무, 그리고 이들 기관이 직접 제안하는 법률안은, 개인의 권리를 보호하는 측면에서 매우 중요하다. 
 
-행정부의 다른 부처들 입장에서, 국가인권위원회와 국민권익위원회는 자신의 업무에 '사사건건 간섭하는' 골치아픈 부서처럼 여겨진다. 게다가 두 위원회의 권고는 말 그대로 강제력 없는 권고일 뿐이라서, 두 위원회의 위상과 권한에 확실하게 힘이 실리지 않으면 행정부 각 부처가 이들을 무시하고 두 위원회의 존재가 유명무실해질 위험이 크다. 이를 막기 위한 국회의 역할이 중요하다. 운영위와 정무위는 국가인권위원회/국민권익위원회의 업무가 정부의 다른 부처에 의해 침해되거나, 이들의 권고가 합당한 이유 없이 계속해서 무시되지 않도록 감사하고, 조사에 필요한 인력과 예산이 충분히 배정되도록 하는 역할을 맡는다. 
+행정부의 다른 부처들 입장에서, 국가인권위원회와 국민권익위원회는 자신의 업무에 ‘사사건건 간섭하는’ 골치아픈 부서처럼 여겨진다. 게다가 두 위원회의 권고는 말 그대로 강제력 없는 권고일 뿐이라서, 두 위원회의 위상과 권한에 확실하게 힘이 실리지 않으면 행정부 각 부처가 이들을 무시하고 두 위원회의 존재가 유명무실해질 위험이 크다. 이를 막기 위한 국회의 역할이 중요하다. 운영위와 정무위는 국가인권위원회/국민권익위원회의 업무가 정부의 다른 부처에 의해 침해되거나, 이들의 권고가 합당한 이유 없이 계속해서 무시되지 않도록 감사하고, 조사에 필요한 인력과 예산이 충분히 배정되도록 하는 역할을 맡는다. 
 
 ### 보건복지위원회(복지위) #1
 보건복지위원회는 보건복지부와 식품의약품안전처, 즉 중앙정부가 집행하는 보건위생 및 복지정책을 모두 다룬다. 여기에는 건강보험과 국민연금을 비롯한 공적연금, 병원-보건소로 구성된 공공/사립의료체계와 의사·간호사·약사의 처우, 영유아 보육과 어린이집 관리, 노인과 장애인의 복지 및 생활지원정책 등이 모두 포함되어, 사회경제적 취약계층의 의료와 생활에 직접 연관된 사항 전반을 다룬다. 복리후생과 관련하여 정부가 직접 자본, 인력, 시설 등의 투자를 도맡아야 하는 분야가 다 몰려있다. 
 
-그런 점에서 복지위는 자본주의와 사회주의적 관점에서 정치적, 경제적, 사회적 철학이 정면으로 맞서는 배틀그라운드가 된다. 개인의 권리와 복리후생을 지키는 데에 반드시 자원투자가 필요한 사업에서, '국가와 사회의 역할이 어디까지인가? 개인이 감당할 영역은 어디까지인가?' '개인의 자원을 개인이 필요할 때 알아서 쓰게 할 것인가? 개인의 자원을 조금씩 모아 사회 공동체 차원에서 대응하게 할 것인가?' 이렇게 두 가지 질문이 충돌하기 때문이다. 예를 들어보자. 개인이 원하는 만큼 돈을 들여서 본인이 원하는 고급 의료진과 고급 의료시설을 직접 선택할 수 있는 체계를 만들 것인가? 아니면 평균 수준의 의료시설을 의료보험을 통해 모든 사람들이 값싼 비용으로 이용할 수 있는 체계를 만들 것인가? 둘 다 하면 좋겠지만, 자본과 인력이 제한된 상태에서 한 쪽을 택하면 다른 한 쪽이 축소될 수 밖에 없다. `모두 조금씩 세금을 더 내서 자원을 늘리기 전까지는(3권 ‘위원회와 주요 이슈 (1)’, p.XXX 참고)` 이 중 하나의 방향성을 정해야 한다. 
+그런 점에서 복지위는 자본주의와 사회주의적 관점에서 정치적, 경제적, 사회적 철학이 정면으로 맞서는 배틀그라운드가 된다. 개인의 권리와 복리후생을 지키는 데에 반드시 자원투자가 필요한 사업에서, ‘국가와 사회의 역할이 어디까지인가? 개인이 감당할 영역은 어디까지인가?’ ‘개인의 자원을 개인이 필요할 때 알아서 쓰게 할 것인가? 개인의 자원을 조금씩 모아 사회 공동체 차원에서 대응하게 할 것인가?’ 이렇게 두 가지 질문이 충돌하기 때문이다. 예를 들어보자. 개인이 원하는 만큼 돈을 들여서 본인이 원하는 고급 의료진과 고급 의료시설을 직접 선택할 수 있는 체계를 만들 것인가? 아니면 평균 수준의 의료시설을 의료보험을 통해 모든 사람들이 값싼 비용으로 이용할 수 있는 체계를 만들 것인가? 둘 다 하면 좋겠지만, 자본과 인력이 제한된 상태에서 한 쪽을 택하면 다른 한 쪽이 축소될 수 밖에 없다. `모두 조금씩 세금을 더 내서 자원을 늘리기 전까지는(3권 ‘위원회와 주요 이슈 (1)’, p.XXX 참고)` 이 중 하나의 방향성을 정해야 한다. 
 
 ### 환경노동위원회(환노위) #1
 환경노동위원회는 그 중요성에 비해 국회에서 찬밥 신세를 면치 못하고 있다. 모든 시민은 곧 일하는 노동자이고, 또한 같은 자연환경을 공유하며 살아가는 생명체이다. 따라서 노동문제와 환경문제는 곧 모든 시민의 권리보장과 복리후생 수준을 결정하게 된다. 하지만 그런 중요한 문제를 처리하는 환노위는 국회 상임위원회 중에서 정보위원회 다음으로 가장 작은 규모(최대 정원 16명)를 가지고 있으며, 그나마도 전혀 다른 분야의 전문성이 필요한 환경과 노동문제를 동시에 다루므로 격무에 시달리고 꼼꼼하게 논의하기 어렵게 된다. 환노위를 통해 드러나는 문제들은 노동 및 환경문제 중에서도 가장 심각한 일부 사례에 불과할 수 있다.
@@ -20,9 +20,9 @@
 여하튼, 고용노동부와 환경부가 소관하는 사무는 환노위가 담당하게 된다. 그 중요성을 확인하기 위해, 두 부처의 역할을 간단하게만 살펴보자. 임금체계, 노동시간, 직업교육 및 고용촉진, 실직자의 구제, 부당해고나 노동조합 탄압 등의 감시, 산업재해 예방과 치료와 피해보상, 그 외 사업장의 노동기준 준수여부 관리감독(이상 고용노동부). 상수도/하수도 및 하천 수질관리, 대기오염물질 및 미세먼지 관리, 폐기물 및 유해화학물질 처리, 기후위기 대응을 위한 온실가스 감축, 위의 사항을 준수하지 않는 기업 적발 및 관리감독(이상 환경부). 그리고 환경부 산하 기상청의 날씨 예측과 태풍/지진 관측 업무까지. 다시 말한다. 이들 사항을 모두 토론하고 심사하고 확인하는 일을 담당하는 국회의원은 불과 16명이다.
 
 ### 여성가족위원회(여가위) #1
-공화정이 처음 들어설 때 제안된 '천부인권'이 국가권력과 자본권력으로부터 개인을 지키는 개념이었다면, 최근에는 개인이 일상생활에서 남들과 다름없이 평안하게 살아가는 것이 인권의 중요한 요소가 되고 있다. 이 점에서 주목받고 있는 대상이 바로 성별과 가족이다. 성별에 의한 사회경제적/심리적/육체적 차별과 그에 따른 불평등, 제도가 보호하지 못하는 `LGBTQ+(레즈비언, 게이, 바이섹슈얼, 트랜스젠더/트랜스섹슈얼, 퀴어/정체성 고민 중, '그 외 성정체성' 등.)`로 표현되는 성소수자의 생활 속 권리, "정상적인 가족형태"라고 일컬어지는 결혼/출생(출산)/양육 등과 무관한 생활공동체의 보호 등 여러가지 문제가 빠른 속도로 중요한 이슈로 떠오르고 있다. 생활 속에서의 다양한 차별사례나 보호받지 못하는 사례를 발견하고 개선해야만, 국가의 존재 가치를 입증하고 사회의 파편화를 막을 수 있기 때문이다. 이 문제는 특히 (가족을 비롯한) 생활공동체를 새로 만들고 노동에 참여하기 시작한 20-30대 도시생활자에게, 앞으로의 직업과 생활형태를 영구히 결정할 수도 있는 매우 중요한 문제이다. 
+공화정이 처음 들어설 때 제안된 ‘천부인권’이 국가권력과 자본권력으로부터 개인을 지키는 개념이었다면, 최근에는 개인이 일상생활에서 남들과 다름없이 평안하게 살아가는 것이 인권의 중요한 요소가 되고 있다. 이 점에서 주목받고 있는 대상이 바로 성별과 가족이다. 성별에 의한 사회경제적/심리적/육체적 차별과 그에 따른 불평등, 제도가 보호하지 못하는 `LGBTQ+(레즈비언, 게이, 바이섹슈얼, 트랜스젠더/트랜스섹슈얼, 퀴어/정체성 고민 중, ‘그 외 성정체성’ 등.)`로 표현되는 성소수자의 생활 속 권리, “정상적인 가족형태”라고 일컬어지는 결혼/출생(출산)/양육 등과 무관한 생활공동체의 보호 등 여러가지 문제가 빠른 속도로 중요한 이슈로 떠오르고 있다. 생활 속에서의 다양한 차별사례나 보호받지 못하는 사례를 발견하고 개선해야만, 국가의 존재 가치를 입증하고 사회의 파편화를 막을 수 있기 때문이다. 이 문제는 특히 (가족을 비롯한) 생활공동체를 새로 만들고 노동에 참여하기 시작한 20-30대 도시생활자에게, 앞으로의 직업과 생활형태를 영구히 결정할 수도 있는 매우 중요한 문제이다. 
 
-그렇기 때문에, 아직 의회와 행정부에서 거의 주목받지 못하고 있지만, 여성가족위원회와 여성가족부(행정부)의 역할과 논의가 매우 중요하다('여성'이라는 단어가 정 그렇게 싫다면, 단어를 '성별'이라고 바꾸고 생각하자). 대부분의 행정기관이 행정부 안에서의 업무에 따라 분리되어 있고, 개인과 생활공동체의 일상과 관련된 사안을 통합적·거시적으로 논의하기 가장 적절한 장소가 여가위이다. 성범죄 대응에 관한 논의는 경찰청을 담당하는 행안위에서 할 수 있고, 한부모가정의 아동교육 지원에 관한 논의는 교육위에서 할 수 있지만, 성범죄의 예방교육이나 피해지원, 또는 한부모가정이 겪는 문제에 대한 실태조사 등의 사업은 여가위에서 논의될 수 밖에 없기 때문이다.
+그렇기 때문에, 아직 의회와 행정부에서 거의 주목받지 못하고 있지만, 여성가족위원회와 여성가족부(행정부)의 역할과 논의가 매우 중요하다(‘여성’이라는 단어가 정 그렇게 싫다면, 단어를 ‘성별’이라고 바꾸고 생각하자). 대부분의 행정기관이 행정부 안에서의 업무에 따라 분리되어 있고, 개인과 생활공동체의 일상과 관련된 사안을 통합적·거시적으로 논의하기 가장 적절한 장소가 여가위이다. 성범죄 대응에 관한 논의는 경찰청을 담당하는 행안위에서 할 수 있고, 한부모가정의 아동교육 지원에 관한 논의는 교육위에서 할 수 있지만, 성범죄의 예방교육이나 피해지원, 또는 한부모가정이 겪는 문제에 대한 실태조사 등의 사업은 여가위에서 논의될 수 밖에 없기 때문이다.
 
 - - -
 
@@ -30,11 +30,18 @@
 
 - - -
 
-#### 서울 강동구 갑, 경기 용인시 병
-**더불어민주당 진선미, 더불어민주당 정춘숙**
+#### 서울 송파구 병, 경기 용인시 병
+**더불어민주당 남인순, 더불어민주당 정춘숙**
+
+남인순(남윤인순)과 정춘숙은 국회의원이 되기 이전부터 여성활동가로 이름이 알려졌다. 각각 한국여성단체연합(여연)과 한국여성의전화(한여전)에서 실무활동가에서 출발해 상임대표까지 맡은 이력을 가지고 있다. 가정과 사회에서 여성들이 받던 물리적 폭력을 공권력이 거의 보호하지 않던 시절, 이들은 여성운동의 현장활동가로서 폭력피해여성을 직접 만나서 함께 대응할 일이 많았다. 
+
+이런 경력을 가진 이들이 국회의원이 되었을 때, 복지위와 여가위를 함께 선택하는 것은 당연한 일일지도 모른다. 현재 더불어민주당 최고위원과 원내대변인이기도 한 두 사람은, 현재 더불어민주당이 여성정책 및 폭력 관련 보건정책에 대한 목소리를 내는 몇 안되는 영향력 있는 인물이기도 하다.
+
 
 #### 서울 강서구 병, 서울 영등포구 갑
 **더불어민주당 한정애, 더불어민주당 김영주**
+
+더불어민주당의 노동
 
 #### 경북 상주군-군위군-의성군-청송군
 **미래통합당 임이자**
@@ -55,7 +62,7 @@
 **개인이 권력을 조금씩 위임해서 공동체에 저축해놓으면, 공동체는 그 권력을 이용해 외부 위협으로부터 개인을 지켜야 한다. 그 공동체의 이름은 국가이고, 그 공동체가 권력을 잘 쓰도록 이끄는 것이 국회의 역할이다.** 
 
 ### 외교통일위원회(외통위)
-외교통일위원회는 외교부와 통일부 소관 업무를 담당한다. 그러나 안타깝게도, 행정부의 외교통일정책을 외통위에서 직접 논의하는 경우는 찾기 힘들다. 외교, 통일 등 '외치' 분야에 있어서, 의회에서 오랫동안 큰 정책방향을 토론하고 행정부에 적용하는 것이 아니라, 행정부의 수반인 대통령이 외교부 관료나 대통령비서실과 국가안보실의 관련 보좌관과 함께 정책을 짜서 그대로 추진하는 경우가 많기 때문이다. 외교통일정책에 있어서 자신들의 영향력이 별로 없다는 것을 국회의원들도 잘 알고 있다. 국회에서 외교통일 정책에 대한 질의는 새로운 외교현안에 대한 논의보다는, 행정부 외교통일 정책을 비평하는 수준에 머무르고 있으며, 질의의 내용도 대중적인 관심을 받기 좋은 대북, 대미, 대일, 대중외교에 치우쳐있다. 한국이 강소국으로서 유럽, 남미, 동남아시아, 아프리카 등 타 권역과 교류하는 문제는 거의 거론되지 않으며, 정무적 차원에서 외교문제를 잘 다루는 의회정치인이 등장하지 않는 데에는 이런 배경이 있다. 
+외교통일위원회는 외교부와 통일부 소관 업무를 담당한다. 그러나 안타깝게도, 행정부의 외교통일정책을 외통위에서 직접 논의하는 경우는 찾기 힘들다. 외교, 통일 등 ‘외치’ 분야에 있어서, 의회에서 오랫동안 큰 정책방향을 토론하고 행정부에 적용하는 것이 아니라, 행정부의 수반인 대통령이 외교부 관료나 대통령비서실과 국가안보실의 관련 보좌관과 함께 정책을 짜서 그대로 추진하는 경우가 많기 때문이다. 외교통일정책에 있어서 자신들의 영향력이 별로 없다는 것을 국회의원들도 잘 알고 있다. 국회에서 외교통일 정책에 대한 질의는 새로운 외교현안에 대한 논의보다는, 행정부 외교통일 정책을 비평하는 수준에 머무르고 있으며, 질의의 내용도 대중적인 관심을 받기 좋은 대북, 대미, 대일, 대중외교에 치우쳐있다. 한국이 강소국으로서 유럽, 남미, 동남아시아, 아프리카 등 타 권역과 교류하는 문제는 거의 거론되지 않으며, 정무적 차원에서 외교문제를 잘 다루는 의회정치인이 등장하지 않는 데에는 이런 배경이 있다. 
 
 이런 현실에서, 외통위는 주로 행정처리기관으로서의 외교부와 통일부에 대한 감사 역할을 맡게 된다. 각국 대사관/공사관의 업무, 개성공단 등 남북교류 사업에서의 민원성 업무처리문제 등이 국정감사에서 주로 논의된다. 사실 이 문제는 단순한 민원처리 수준을 넘어선다. 외국 사법부에 의해 한국 국민이 부당한 감옥살이 또는 인권침해를 겪는다던가, 한국 국민의 신체와 재산이 억류되는 상황이 논의되기 때문이다. 이런 문제가 외교부나 통일부의 관심을 충분히 받지 못해서 제대로 해결되지 못할 때, 외통위의 국정감사에서 논의되는 것은 문제해결을 위해 큰 도움이 된다. 
 
@@ -83,7 +90,7 @@
 개인에게 닥쳐오는 재해의 상당 부분이 개인의 일터와 관련이 있다. 제조업이나 건설업과 같은 전통적인 노동현장에서 추락, 절단, 독성물질 누출 사고. 사무실에서 일하는 직업에서 나타나는 과로사, 정신건강 손상. 도시 시스템을 유지하는데 필수적인 일터에서의 교통사고, 근골격계 손상, (자유로운 화장실 사용이 불가능함에 따른) 배뇨기관 손상 등등. 뿐만 아니라, 일터에서 환경규제를 지키지 않고 각종 독성물질을 하수나 배기가스, 산업쓰레기의 형태로 배출할 때에도 국가적인 재해가 될 수 있다(전국 각지에서 방사성 라돈이 사용된 제품이 적발되었던 것을 기억해 보자). 이런 재해가 일어나지 않도록 사전에 예방하려면, 법률을 통해 안전한 일터를 만드는 각종 노동규제와 환경규제를 보강하고 처벌규정을 강화하며, 노동부, 노동청이 제대로 일하도록 감사하는 역할을 환경노동위원회가 맡아야 한다. 
 
 ### 여성가족위원회(여가위) #2
-개인의 생활이 안전해지기 위해 행정부가 가족정책에 개입할 부분이 많다. 예를 들어, 전통적으로 '가족' 영역에 속하지 않아 안전에 취약해지는 계층(가출 청소년이나 가출한 가족구성원, 동거하지만 결혼할 권리를 보장받지 못하는 동성커플이나 노년커플 등)을 보호할 제도나 시설을 확충해야 하고, 가족 내에서 학대받은 피해자가 탈출하여 보호받을 시설을 만들고 가해자의 양육권을 박탈하는 조치가 필요하다. 이상의 행정을 지휘하고 제도를 도입하는 중앙행정부처가 바로 여성가족부고, 국회 안에서 이런 문제를 논의하는 곳이 여성가족위원회다. 특히 2010년대부터 성폭력이나 불법촬영물 피해 등 개인에게 심각한 재해가 되는 성범죄 문제가 부각되는 상황에서, 여가위는 '방재 및 재난피해지원' 차원에서 끓어오르는 사회적 요구를 심도있게 논의할 수 있는 공간이다.
+개인의 생활이 안전해지기 위해 행정부가 가족정책에 개입할 부분이 많다. 예를 들어, 전통적으로 ‘가족’ 영역에 속하지 않아 안전에 취약해지는 계층(가출 청소년이나 가출한 가족구성원, 동거하지만 결혼할 권리를 보장받지 못하는 동성커플이나 노년커플 등)을 보호할 제도나 시설을 확충해야 하고, 가족 내에서 학대받은 피해자가 탈출하여 보호받을 시설을 만들고 가해자의 양육권을 박탈하는 조치가 필요하다. 이상의 행정을 지휘하고 제도를 도입하는 중앙행정부처가 바로 여성가족부고, 국회 안에서 이런 문제를 논의하는 곳이 여성가족위원회다. 특히 2010년대부터 성폭력이나 불법촬영물 피해 등 개인에게 심각한 재해가 되는 성범죄 문제가 부각되는 상황에서, 여가위는 ‘방재 및 재난피해지원’ 차원에서 끓어오르는 사회적 요구를 심도있게 논의할 수 있는 공간이다.
 
 
 - - -
@@ -95,11 +102,14 @@
 #### 서울 동작구 갑, 충북 청주시 상당구
 **더불어민주당 김병기, 정의당 김종대**
 
-민주당계 정당과 사민주의 정당이 왠지 모르게 '외교안보에 관심이 없다'는 평가를 받다보니, 두 정당에서도 이를 해소할 수 있는 인물을 원하기 마련이다. 국가정보원 인사처장 출신의 김병기, 국방장관 정책보좌관 출신의 김종대는 이런 점을 바탕으로 2016년 총선을 앞두고 각 당에 영입되었다. 
+민주당계 정당과 사민주의 정당이 왠지 모르게 ‘외교안보에 관심이 없다’는 평가를 받다보니, 두 정당에서도 이를 해소할 수 있는 인물을 원하기 마련이다. 국가정보원 인사처장 출신인 김병기, 국방장관 정책보좌관 출신인 김종대는 이런 점을 바탕으로 2016년 총선을 앞두고 각 당에 영입되었다. 
+
+다만 두 의원의 입법활동 방식은 매우 달랐다. 김종대는 <군인사법>의 육아휴직 확대, <군인재해보상법> 제정, <병역법> 내 성소수자 처벌규정 폐지, <군용항공기 비행안전성 인증에 관한 법률>에 민간인 위원 위촉기회를 넓히는 등 인사와 무기, 병영인권 전반에 대해 조금씩 손질하는 입법안을 내놓았다. 반면에 김병기는 더불어민주당 당론을 종합하여, 국가정보원의 구조 및 권한체계를 완전히 바꿔버리는 <국가정보원법> `전부개정법률안(국회가 법률을 개정할 때에는 보통 필요한 일부 조항만 개정하는 “일부개정법률안”을 제출한다. 그러나 대상이 되는 조직의 이름과 권한과 구조가 완전히 바뀌는 경우, 법률을 폐지하고 새로 제정하는 수준의 “전부개정법률안”을 제출한다.)`을 더불어민주당을 대표하여 제출한다. 
 
 #### 서울 강동구 갑
 **더불어민주당 진선미**
 
+2016-2020 국회의 전반기에 행안위 
 
 #### 경기 평택시 갑, 인천 미추홀구 을
 **미래통합당 원유철, 미래통합당-무소속 윤상현**
@@ -112,22 +122,22 @@
 **활기있는 사회는 부유함 만으로 이룰 수 없다. 배우고, 가르치고, 즐기고, 통찰하고, 상상하여, 사회 전반의 이성과 감성과 신체를 일깨워야 한다. 이런 작업에 국가 예산과 행정력이 투입되어야 한다. 당장은 쓸모없어 보이더라도.**
 
 ### 교육위원회(교육위)
-교육위원회는 교육부가 담당하는 유치원, 초등학교, 중학교, 고등학교, 대학교, 대학원, 직업교육, 평생교육과 관련된 사항을 논의한다. 이것을 '교육정책'이라는 한 단어로 퉁치는 것은 너무 가벼운 일이다.  한국의 엘리트 지배계급은 (공)교육사업이 장래 경제문제와 사회문제 등 나라의 근간을 좌우하는 중요한 문제라고 취급한다. 한편으로 공교육은 학생과 보호자의 욕망과 경쟁심이 이글거리는 장이기도 하다. 또 한편으로는 학교에 다니는 청소년들의 생활 공간을 다루고, 교육을 받고 교육을 제공하는 성인 학생, (교사와 연구원 등) 노동자들의 커뮤니티이자 일터를 다룸으로서 사람들의 삶에 큰 영향을 끼치는 영역이다. 한국 사회에서 공교육이 가지는 의미는 이처럼 거대해서, `1년에 72조 5천억 원, 전체 국가재정의 14.1%(2020년도 예산안 기준)`를 투입하는 거대한 사업이다. 한편으로는 입시부정이나 사학의 비리운영과 같은 감사할 구멍도 많고, 또 한편으로는 아무리 잘 굴러가더라도 모두를 만족시킬 수 없는 아주 난해한 사업이기도 하지만.
+교육위원회는 교육부가 담당하는 유치원, 초등학교, 중학교, 고등학교, 대학교, 대학원, 직업교육, 평생교육과 관련된 사항을 논의한다. 이것을 ‘교육정책’이라는 한 단어로 퉁치는 것은 너무 가벼운 일이다.  한국의 엘리트 지배계급은 (공)교육사업이 장래 경제문제와 사회문제 등 나라의 근간을 좌우하는 중요한 문제라고 취급한다. 한편으로 공교육은 학생과 보호자의 욕망과 경쟁심이 이글거리는 장이기도 하다. 또 한편으로는 학교에 다니는 청소년들의 생활 공간을 다루고, 교육을 받고 교육을 제공하는 성인 학생, (교사와 연구원 등) 노동자들의 커뮤니티이자 일터를 다룸으로서 사람들의 삶에 큰 영향을 끼치는 영역이다. 한국 사회에서 공교육이 가지는 의미는 이처럼 거대해서, `1년에 72조 5천억 원, 전체 국가재정의 14.1%(2020년도 예산안 기준)`를 투입하는 거대한 사업이다. 한편으로는 입시부정이나 사학의 비리운영과 같은 감사할 구멍도 많고, 또 한편으로는 아무리 잘 굴러가더라도 모두를 만족시킬 수 없는 아주 난해한 사업이기도 하지만.
 
 교육위는 지역구 국회의원들이 들어가기 선호하는 위원회 중 하나다. 지역 내 교육시설이나 교육관련 예산을 유치하는 것이 지역구에서 다시 당선되는 데에 중요한 역할을 하기 때문이다(배정된 예산이 많다는 것은 따올 수 있는 예산이 많다는 의미이기도 하다). 특히 2010년대 초까지 특수목적고등학교나 자립형/자율형사립고 유치 열풍이 불었을 때, 교육위 소속 국회의원들은 이러한 고등학교의 설립/전환을 최종 인가하는 교육부를 직접 상대할 수 있었다. 이것은 현재에도 대학교 시설 또는 분교 유치, 도서관 유치와 같은 지역사업의 형태로 지속되고 있다. 
 
 
 ### 과학기술정보방송통신위원회(과방위) #1
-과학기술정보방송통신위원회가 담당하는 중앙정부 부처 중에서, 교육/문화/학문 관련 부처는 과학기술정보통신부(이하 '과기정통부')와와 방송통신위원회(이하 '방통위')가 있다. 도대체 어떤 연관성을 가지고 뭉친 것인지 알기 어려운 복잡한 이름이 담긴 사연을 알아보자. 
+과학기술정보방송통신위원회가 담당하는 중앙정부 부처 중에서, 교육/문화/학문 관련 부처는 과학기술정보통신부(이하 ‘과기정통부’)와와 방송통신위원회(이하 ‘방통위’)가 있다. 도대체 어떤 연관성을 가지고 뭉친 것인지 알기 어려운 복잡한 이름이 담긴 사연을 알아보자. 
 
 먼저, 과방위는 자연과학 및 기술 연구 관련 정책사항을 담당한다. 한국에서 이뤄지는 자연과학 연구는 대부분 정부출연연구기관이나 정부의 연구비 지원사업에 절대적으로 의존하고 있으며, 기술공학 분야에서도 그 비중이 상당하다. 따라서 과방위에서 논의되는 자연과학 및 기술 연구 관련 정책은 학계 연구 프로젝트의 지속성과 향후 방향성을 결정하는 중요한 요소가 된다. 특히 정부가 직접 고용하는 연구원의 처우, 정부가 투입하는 연구예산의 중장기적 활용 문제는 자연과학 및 기술 연구계에서 매번 예의주시하는 문제이다. 
 
 두 번째로, 과방위는 방송산업(특히 공영방송)의 관리와 방송-인터넷 심의규제 관련 정책사항을 담당한다. 방통위는 방송사의 설립 허가와 재승인 허가, KBS/MBC/EBS 운영관리 및 예산사용 등에 관여할 수 있는데, 이를 통해 방송산업 육성의 측면, 방송에서 보도나 시사교양 등 언론으로서의 역할 측면, 방송 컨텐츠의 심의 측면 등에 영향을 줄 수 있다. 특히 KBS와 MBC라는 거대한 언론사를 다룬다는 점 때문에, 과방위가 방통위와 관련된 안건을 다룰 때에는 각 정당마다 첨예한 논쟁이 불붙기 마련이다. 
 
 ### 문화체육관광위원회(문체위)
-문화체육관광위원회는 문화체육관광부의 소관 사무를 담당한다. 미술, 음악, 문학, 연극·영화, 체육, 게임, 관광, 스포츠, 언론·출판·미디어, 한국어 언어문화 등, 문화예술 관련 활동과 산업 전반을 다루는 상당히 규모있는 위원회다. 문체위의 소관 범위는 자본이나 국가권력으로부터 독립된 채 자생하는 문화, 자본과 일자리가 연관된 산업으로서의 문화, '국가의 위상과 직결되는' 영역으로서의 문화를 모두 포괄한다. 게다가 '문화계'라고 하나로 퉁치기에는 너무나 다양한 분야를 포괄한다(봉준호 감독과 방상훈 조선일보 사장이 나란히 문체위 회의에 출석하는 모습을 상상해보라). 따라서 문체위 소속 국회의원들은 '문화'의 어떤 영역과 속성에 주목하여 활동하느냐에 따라 평가가 극과 극으로 갈리게 된다.
+문화체육관광위원회는 문화체육관광부의 소관 사무를 담당한다. 미술, 음악, 문학, 연극·영화, 체육, 게임, 관광, 스포츠, 언론·출판·미디어, 한국어 언어문화 등, 문화예술 관련 활동과 산업 전반을 다루는 상당히 규모있는 위원회다. 문체위의 소관 범위는 자본이나 국가권력으로부터 독립된 채 자생하는 문화, 자본과 일자리가 연관된 산업으로서의 문화, ‘국가의 위상과 직결되는’ 영역으로서의 문화를 모두 포괄한다. 게다가 ‘문화계’라고 하나로 퉁치기에는 너무나 다양한 분야를 포괄한다(봉준호 감독과 방상훈 조선일보 사장이 나란히 문체위 회의에 출석하는 모습을 상상해보라). 따라서 문체위 소속 국회의원들은 ‘문화’의 어떤 영역과 속성에 주목하여 활동하느냐에 따라 평가가 극과 극으로 갈리게 된다.
 
-문체위는 두 가지 측면에서 의원들의 인기를 얻는다. 첫째는 특정 문화체육 관련 단체, 예를 들어 '대한XX협회', '대한프로XX연맹' 등의 회장직을 맡은 국회의원이 문체위에 들어가는 경우이다. 단체가 국회의원을 회장으로 초빙하여 그의 정치적 발언력을 통해 여러 문제를 해결하고자 하는 것인데, 국회의원의 입장에서도 해당 단체의 조직력과 지지가 인지도 상승에 도움이 될 것으로 기대하고 이를 수락하게 된다. 둘째로, 특정 문화체육 분야의 유명인사가 국회의원이 되어 자신의 직군을 대표하여 활동하는 경우가 있다. 2016-2020 국회의 가장 대표적인 예로, 바둑기사 조훈현이 새누리당 비례대표로 당선된 후 문체위에서 일하며 <바둑진흥법>을 대표발의하여 통과시킨 경우가 있다. 
+문체위는 두 가지 측면에서 의원들의 인기를 얻는다. 첫째는 특정 문화체육 관련 단체, 예를 들어 ‘대한XX협회’, ‘대한프로XX연맹’ 등의 회장직을 맡은 국회의원이 문체위에 들어가는 경우이다. 단체가 국회의원을 회장으로 초빙하여 그의 정치적 발언력을 통해 여러 문제를 해결하고자 하는 것인데, 국회의원의 입장에서도 해당 단체의 조직력과 지지가 인지도 상승에 도움이 될 것으로 기대하고 이를 수락하게 된다. 둘째로, 특정 문화체육 분야의 유명인사가 국회의원이 되어 자신의 직군을 대표하여 활동하는 경우가 있다. 2016-2020 국회의 가장 대표적인 예로, 바둑기사 조훈현이 새누리당 비례대표로 당선된 후 문체위에서 일하며 <바둑진흥법>을 대표발의하여 통과시킨 경우가 있다. 
 
 - - -
 
@@ -138,7 +148,7 @@
 #### 서울 강북구 갑
 **더불어민주당 박용진**
 
-입법활동만 놓고 보면, 2016-2020 국회에서 가장 주목받은 인물이 박용진이다. 시민단체 <정치하는 엄마들>과의 협업으로 국가지원금을 사적으로 사용하거나 횡령하고 유치원 운영은 제대로 하지 않은 사립유치원의 명단을 폭로하고, 이를 예방하기 위한 소위 `"유치원 3법"(교육부와 지방교육청이 유치원의 회계관리를 투명하게 살펴보고, 유치원 내 급식을 학교처럼 엄격하게 관리감독할 수 있도록 하는 <유아교육법>, <사립학교법>, <학교급식법> 개정안)`을 대표발의했으며, 결국 임재훈(국민의당-미래통합당) 의원의 유치원 3법 중재안이 신속처리안건으로 지정되어 통과할 수 있도록 유도했다. 
+입법활동만 놓고 보면, 2016-2020 국회에서 가장 주목받은 인물이 박용진이다. 시민단체 <정치하는 엄마들>과의 협업으로 국가지원금을 사적으로 사용하거나 횡령하고 유치원 운영은 제대로 하지 않은 사립유치원의 명단을 폭로하고, 이를 예방하기 위한 소위 `“유치원 3법”(교육부와 지방교육청이 유치원의 회계관리를 투명하게 살펴보고, 유치원 내 급식을 학교처럼 엄격하게 관리감독할 수 있도록 하는 <유아교육법>, <사립학교법>, <학교급식법> 개정안)`을 대표발의했으며, 결국 임재훈(국민의당-미래통합당) 의원의 유치원 3법 중재안이 신속처리안건으로 지정되어 통과할 수 있도록 유도했다. 
 
 박용진은 이 과정에서 사립유치원의 비리운영문제를 중앙정치의 주요 이슈로 끌어올리고 효과적인 전국적 여론전을 펼쳤다. 사립유치원 경영자들은 지역구 내부의 여론을 좌지우지하여 국회의원을 낙선시킬 힘이 있다고 여겨졌는데, 이를 
 정면으로 되받아치는 데 성공한 것이다.
@@ -146,27 +156,33 @@
 #### 인천 미추홀구 갑
 **미래통합당 전희경**
 
+전희경은 국회의원으로서의 활동보다는, 자유경제원 등 `뉴라이트(자유지상주의 경제관, 반공보수적 역사관을 바탕으로 보수우파 사상계를 재편하자는 움직임. 2006년 즈음부터 여러 시민단체를 통해 구체적으로 드러났으며, 역사학 측면에서는 일제강점기와 이승만 행정부의 긍정적 재해석을 시도하고 있다.)` 계열의 시민단체에서 활동했던 것으로 더 유명하다. 2015년 박근혜 행정부가 중고등학교 한국사 교과서를 교육부가 출판하는 1개 종류만 사용하는 정책(한국사 교과서 국정화)을 추진할 때, 전희경은 시민사회 안에서 이를 가장 강력하게 주장하고 보수주류 정당(새누리당)의 초청을 받아 강연을 진행하기도 하였다. 
+전희경은 그 과정을 거쳐, 2016년 총선에서 새누리당의 비례대표 당선권(순번 9번) 후보로 공천받고 당선되었다. 정작 국회의원이 된 이후 전희경의 활동이 두드러지진 않았지만, 4년간 교육위에 개근하면서 교육에 대한 지대한 관심을 보였다. 만약 2020-2024 국회에서 한국사 교육과 관련된 이슈가 등장한다면, 가장 적극적으로 뛰어들 사람이다.
+
 #### 서울 서초구 을, 대전 유성구 을
 **더불어민주당 박경미, 국민의당-미래통합당 신용현**
 
 언젠가부터 기성 정당에서는 여성 이공계열 종사자를 비례대표 1번으로 공천하는 풍습이 자리잡았다. 수학교육학 교수였던 박경미, 한국표준과학연구원장을 역임한 신용현은 2016년 총선에서 각각 더불어민주당, 국민의당의 비례대표 순번 1번으로 당선되었다. 각 정당은 이공계를 중시한다는 상징으로 이들을 선거기간동안 내세우기도 했으며, 이들 국회의원 역시 (상임위원회를 2년 간격으로 바꾸는 보통의 경우와 달리) 각각 교문위와 과방위에서 4년을 꼬박 활동하였다. 
 
-이들은 2020년에 자신의 직업군과 일치하는 '험지'로 출마할 것으로 보인다. 두 인물은 2018년부터 더불어민주당 서초(을), 바른미래당 유성(을) 지역위원장을 역임했다. 수학 (사)교육에 관심이 많은 지역과 자연과학 연구자가 많은 지역을 타겟으로 잡은 듯 보인다. 서초구 을에서 민주당계 정당이 당선된 것은 1988년이 마지막(김덕룡, 통일민주당)이었고, 유성구가 설치된 1988년 이후 보수주류 정당은 유성구에서 승리한 적이 없다. 
-
-
+이들은 2020년에 자신의 직업군과 일치하는 ‘험지’로 출마할 것으로 보인다. 두 인물은 2018년부터 더불어민주당 서초(을), 바른미래당 유성(을) 지역위원장을 역임했다. 수학 (사)교육에 관심이 많은 지역과 자연과학 연구자가 많은 지역을 타겟으로 잡은 듯 보인다. 서초구 을에서 민주당계 정당이 당선된 것은 1988년이 마지막(김덕룡, 통일민주당)이었고, 유성구가 설치된 1988년 이후 보수주류 정당은 유성구에서 승리한 적이 없다. 
 
 
 #### 경기 고양시 병, 충북 청주시 흥덕구
 **더불어민주당 유은혜, 도종환**
 
+겨우 재선의원이지만, 대도시가 지역기반인 점(유은혜)과 유명 시인이라는 점(도종환) 때문에 이름값만큼은 높은 두 의원은, 문재인 행정부에서 가장 중요한 시기에 장관으로 임명되었다. 유은혜는 대입제도 개편안과 비리 사립유치원 문제가 본격 논의되던 2018년 10월에 교육부 장관(겸 부총리), 도종환은 평창 동계올림픽 막판준비가 한창이던 2017년 6월에 문화체육관광부 장관이 되었다. 
+
+가장 민감한 시기에 장관이 되었던 만큼, 이들은 문재인 행정부의 국정운영을 평가할 때 마다 그 중심에서 엄청난 비판과 지지를 동시에 받았다. 2020년 총선에서, 교육열 높은 신도시(일산)인 고양시 병은 출마가 `불가능(<공직선거법>에 의해, 현직 장관이 국회의원에 출마하려면 선거일 90일 전에 장관에서 사퇴해야 한다.)`한 현임 장관 유은혜를 대신하여 출마하는 후보를 통해 문재인 행정부 교육정책을 평가할 것이다. 또한 도종환은 장관직 수행의 결과가 자신의 이름값을 높였는지 낮추었는지를 총선을 통해 검증할 것이다. 
+
 #### 경남 창원시 성산구
 **정의당 여영국**
 
-2019년 보궐선거에서 당선된 여영국
+2019년 보궐선거에서 당선된 여영국의 임기는 1년 밖에 되지 않았지만, 그 1년 동안 국정감사를 통해 향후 교육계에 큰 파장을 일으킬 떡밥을 던졌다. 
 
 #### 경기 오산시
 **더불어민주당 안민석**
 
+이화여자대학교 `재학생과 졸업생(이화여대가 직업교육기관인 ‘미래라이프대학’ 신설을 추진하자, 이에 대한 재학생/졸업생 반대 집회가 언론의 주목을 받으며 학내 비리의혹을 터뜨리는 기폭제가 되었다.)`이 박근혜 대통령 탄핵의 시작을 알렸다면, 국회 안에서 탄핵의 시작을 알린 것은 안민석이었다. 승마 특기생으로 이화여대에 진학한 최서원(최순실)의 딸 정유라의 문제가 아직 음모론 수준을 벗어나지 못하던 시절, 안민석은 국정감사 차원에서 이 의혹을 지속적으로 제기했다. 정유라가 승마 국가대표선발전에서 탈락하자 심판들이 검찰조사를 받은 것, 정유라가 교양수업에서 성적의 특혜를 받았다는 점 등이 안민석을 통해 질의되었다. 안민석이 미리미리 준비하지 않았다면, 탄핵과정의 시작이 매우 늦어지거나 박근혜의 임기 종료 후에나 수사가 시작되었을 것이다. 
 
 
 
@@ -199,9 +215,7 @@
 
 #### 부산 서구-동구?
 **미래통합당 송희경**
-
-
-새누리당 송희경(p. XXX 참조) 뿐만 아니라, 
+여성 이공계열 종사자를 비례대표 1번으로 공천하는 풍습(p. XXX 참고)은 보수주류 정당도 예외가 아니었다. 2016년 새누리당 비례 1번으로 당선된 송희경은, 
 
 #### 경기 고양시 정
 **더불어민주당 김현미, 미래통합당 김현아**
@@ -214,6 +228,10 @@
 #### 전남 담양군-함평군-영광군-장성군
 **더불어민주당 이개호**
 
+
+
 #### 전북 군산시, 울산 동구
 **국민의당-무소속 김관영, 민중당 김종훈**
 
+군산과 울산은 2016년부터 진행된 대기업 제조업 공장의 구조조정으로 인해 주요 공장들이 폐쇄되며, 도시의 존폐를 걱정해야 하는 상황에 처했다. 그 중에서 한국GM의 군산공장 폐쇄, 현대중공업의 군산조선소 폐쇄, 현대중공업-대우조선해양 합병에 따른 중복분야 인력감축 문제 등이 노동자와 지역경제에 큰 공포로 다가왔다. 대형 공장 뿐만 아니라, 이들의 하청을 받는 공장, 노동자들이 주요 고객인 지역 자영업자가 모두 타격을 입기 때문이다.
+그 한가운데에 놓인 지역구 국회의원들은 정부의 대응을 비판하며 대책을 촉구하게 된다. 군산의 김관영과 울산 동구의 김종훈은 2016-2020 국회에서 각각 후반기, 전반기의 산통자위 소속으로 이 문제에 직접 대응해야 했다. 산업의 문제이자 노동의 문제이자 정부재정투입과 관련된 문제이기에, 재무관료 출신인 김관영과 지역 노동운동가 출신인 김종훈의 존재는 매우 적절했다. 
